--- a/index.html
+++ b/index.html
@@ -3,21 +3,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>l'Odysée</title>
+    <title>l'Odyssey</title>
 </head>
 <body>
-    <header>
+    <header class="nav-container">
         <div class="logo"><img src="" alt="Logo du site"></div>
-        <nav>
-
+        <div class="nav-burger">
+            <div class="burger">
+                <div class="burger-line1"></div>
+                <div class="burger-line2"></div>
+                <div class="burger-line3"></div>
+            </div>
+        </div>
+        <nav class="navbar">
+            <ul class="nav-items container">
+                <li class="item"><a href="">Menu</a></li>
+                <li class="item"><a href="">Reservations</a></li>
+                <li class="item"><a href="">Presentations</a></li>
+                <li class="item"><a href="">Galerie</a></li>
+                <li class="item"><a href="">Evenements</a></li>
+                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="">Livre d'or</a></li>
+                <li class="item"><a href="">Rejoignez nous</a></li>
+            </ul>
         </nav>
     </header>
 
-    
-    
-
-
+    <h1>L'Odyssey</h1>
 
     <script src="style.js"></script>
 </body>
