--- a/about.html
+++ b/about.html
@@ -7,6 +7,29 @@
     <title>l'Odysée</title>
 </head>
 <body>
+    <header class="nav-container">
+        <div class="logo"><img src="" alt="Logo du site"></div>
+        <nav class="navbar">
+            <div class="nav-burger">
+                <div class="burger">
+                    <div class="burger-line1"></div>
+                    <div class="burger-line2"></div>
+                    <div class="burger-line3"></div>
+                </div>
+            </div>
+            <ul class="nav-items container">
+                <li class="item"><a href="">Menu</a></li>
+                <li class="item"><a href="">Reservations</a></li>
+                <li class="item"><a href="">Presentations</a></li>
+                <li class="item"><a href="">Galerie</a></li>
+                <li class="item"><a href="">Evenements</a></li>
+                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="">Livre d'or</a></li>
+                <li class="item"><a href="">Rejoignez nous</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h1>Qui sommes nous</h1>
     <p>
         L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
@@ -33,7 +56,8 @@ Leur base de données de compétences est impressionnante!
         vous pouvez réserver une table dans notre restaurant grâce à l'onglet de réservation situé dans la barre de navigation.
     </p>
     <p>
-        N'hesitez pas à nous contacter pour toute information ou requête spéciale, nous disposons de salons privés réservables pour vos séminaires, mariages, réunions..>
+        N'hesitez pas à nous contacter pour toute information ou requête spéciale, nous disposons de salons privés réservables pour vos séminaires, mariages, réunions...
+        Notre équipe reste à votre entière disposition.
     </p>
 
     
