changed to script.js

--- a/about.html
+++ b/about.html
@@ -64,6 +64,6 @@ Leur base de données de compétences est impressionnante!
     
 
 
-    <script src="style.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
