--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="" alt="Logo du site"></div>
+        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <div class="nav-burger">
                 <div class="burger">
@@ -19,7 +19,7 @@
                     <div class="burger-line3"></div>
                 </div>
             </div>
-            <ul class="nav-items container">
+            <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
                 <li class="item"><a href="">Reservations</a></li>
                 <li class="item"><a href="">Presentations</a></li>
