reformating the index (avis.html) with group formating

--- a/avis.html
+++ b/avis.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avis clients</title>
     <link rel="stylesheet" href="avis.css">
+    
+    <!-- TITRE A CHANGER -->
+    <title>Avis clients</title>
 </head>
 <body>
-    <div id="main">
-
-        <!-- Menu -->
-        <div class="menu-bar">
+    <header>
+        <div id="logo">
+            <a href="index.html"><img src="" alt=""></a>
         </div>
+        <nav> 
+            <ul>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+                <li><a href="#"></a></li>
+            </ul>
+        </nav>
+        <div id="banner">
+        </div>
+    </header>
+
+    <div id="container">
+        <!-- CODE DE NOS PAGES ICI -->
 
         <!-- Title -->
         <h1>Avis clients</h1>
@@ -44,12 +63,12 @@
             </fieldset>
         </div>
 
-        <!-- Footer -->
-        <div class="footer-bar">
-        </div>
-
     </div>
-    <script src="avis.js"></script>
 
+    <footer>
+
+    </footer>
+
+    <script src="avis.js"></script>
 </body>
 </html>
