adding the submit form style

--- a/avis.html
+++ b/avis.html
@@ -48,11 +48,11 @@
 
         <!-- Container with the form -->
         <div class="add-opinion-container">
-            <fieldset>
+            <!--<fieldset>-->
                 <form id="add-opinion-form">
-                    <input type="text" id="name" placeholder="Votre nom" />
+                    <input type="text" id="name" class="submit-element" placeholder="Votre nom" />
                     
-                    <div class="stars-rating-container">
+                    <div class="stars-rating-container submit-element">
                         <span class="star" value="1">★</span>
                         <span class="star" value="2">★</span>
                         <span class="star" value="3">★</span>
@@ -60,10 +60,10 @@
                         <span class="star" value="5">★</span>
                     </div>
  
-                    <textarea id="message" placeholder="Votre commentaire" required></textarea>
-                    <button id="submit">Envoyer</button>
+                    <textarea id="message" class="submit-element" placeholder="Votre commentaire" required></textarea>
+                    <button id="submit" class="submit-element">Envoyer</button>
                 </form>
-            </fieldset>
+            <!-- </fieldset> -->
         </div>
 
     </div>
