ajout navbar responsive

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <header class="nav-container">
         <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
-            <div class="nav-burger">
-                <div class="burger">
-                    <div class="burger-line1"></div>
-                    <div class="burger-line2"></div>
-                    <div class="burger-line3"></div>
-                </div>
-            </div>
             <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
                 <li class="item"><a href="">Reservations</a></li>
-                <li class="item"><a href="">Presentations</a></li>
+                <li class="item desktop"><a href="">Presentations</a></li>
+                <li class="item"><a href="">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line1"></div>
+                <div class="burger-line2"></div>
+                <div class="burger-line3"></div>
+            </div>
+            <ul class="nav-burger-item">
                 <li class="item"><a href="">Galerie</a></li>
                 <li class="item"><a href="">Evenements</a></li>
-                <li class="item"><a href="">Contact</a></li>
+                <li class="item desktop"><a href="">Presentations</a></li>
                 <li class="item"><a href="">Livre d'or</a></li>
                 <li class="item"><a href="">Rejoignez nous</a></li>
             </ul>
