ajout css, script animation navbar

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="nav-burger-item">
                 <li class="item"><a href="">Galerie</a></li>
                 <li class="item"><a href="">Evenements</a></li>
-                <li class="item desktop"><a href="">Presentations</a></li>
+                <li class="item mobile"><a href="">Presentations</a></li>
                 <li class="item"><a href="">Livre d'or</a></li>
                 <li class="item"><a href="">Rejoignez nous</a></li>
             </ul>
@@ -35,6 +35,6 @@
 
     <h1>L'Odyssey</h1>
 
-    <script src="style.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
