--- a/reservation.html
+++ b/reservation.html
@@ -11,7 +11,7 @@
     <title>Réservation</title>
 </head>
 <body>
-   <!-- <header class="nav-container">
+    <header class="nav-container">
         <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <div class="nav-burger">
@@ -33,7 +33,7 @@
             </ul>
         </nav>
     </header>
--->
+
 
     <div id="container">
         <!-- CODE DE NOS PAGES ICI -->
@@ -51,18 +51,18 @@
                 <input type="date" id="reservation-date" />
 
                 <select name="reservation-time" id="reservation-time">
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
+                    <option value="11h30"></option>
+                    <option value="12h"></option>
+                    <option value="12h30"></option>
+                    <option value="13h"></option>
+                    <option value="13h30"></option>
+                    <option value="14h"></option>
+                    <option value="19h"></option>
+                    <option value="19h30"></option>
+                    <option value="20h"></option>
+                    <option value="20h30"></option>
+                    <option value="21h"></option>
+                    <option value="21h30"></option>
                 </select>
 
                 <input type="number" id="reservation-number" />
