--- a/reservation.html
+++ b/reservation.html
@@ -77,18 +77,18 @@
                     <input type="number" id="reservation-number" min="1" max="10" />
                 </div>
 
-                <button id="submit" class="reservation-input-element reservation-button">Réserver</button>
+                <button id="submit" class="reservation-input-element reservation-button"><span class="hand-icon">&#9758;</span> Réserver</button>
             </div>
 
         </div>
 
         <!-- Global phone reservation -->
         <div id="phone-global-reservation">
-            
+
             <!-- Phone reservation -->
             <div id="reservation-phone-container">
                 <h3>Réserver par téléphone</h3>
-                <a href="tel:03.13.26.33.44" class="phone-number">03.13.26.33.44</a>
+                <a href="tel:03.13.26.33.44" class="phone-number"><span class="phone-icon">&#9743;</span> 03.13.26.33.44</a>
 
             </div>
 
@@ -98,7 +98,7 @@
                 <p>Mariages, Anniversaires, Séminaires, ...</p>
                 <button class="reservation-button">Découvrir nos événements</button>
                 <h4>Contactez nous par téléphone pour plus d'informations sur la réservation</h4>
-                <a href="tel:03.13.26.33.49" class="phone-number">03.13.26.33.49</a>
+                <a href="tel:03.13.26.33.49" class="phone-number"><span class="phone-icon">&#9743;</span> 03.13.26.33.49</a>
 
             </div>
         </div>
