--- a/presentations.html
+++ b/presentations.html
@@ -33,6 +33,8 @@
         </nav>
     </header>
 
+    <div class="image-about"><img src=https://pixabay.com/images/id-1837150/ alt="photo de l'doyssey"></div>
+
     <h1>Qui sommes nous</h1>
     <p>
         L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
@@ -68,6 +70,8 @@ Notre équipe reste à votre entière disposition.
     <p> 
         abonnez-vous à notre Newsletter pour rester informé.
     </p>
+
+    <div class="burger"><img src=https://pixabay.com/images/id-1081707/ alt="photo de burger"></div>
     <script src="script.js"></script>
 </body>
 </html>
