--- a/index.html
+++ b/index.html
@@ -32,17 +32,22 @@
     </header>
 
     <div class="event-container">
+    <div class="img-container">
 <img class="theme" src="" alt="img du thème">
 <p>Mariage</p>
-
-<img class="theme" src="" alt="img du thème">
-<p>Dancing</p>
-
-<img class="theme" src="" alt="img du thème">
-<p>Réunion de travail</p>
-
-<img class="theme" src="" alt="img du thème">
-<p>concert</p>
+</div>
+<div class="img-container">
+    <img class="theme" src="" alt="img du thème">
+    <p>Dancing</p>
+</div>
+<div class="img-container">
+    <img class="theme" src="" alt="img du thème">
+    <p>Réunion de travail</p>
+</div>
+<div class="img-container">
+    <img class="theme" src="" alt="img du thème">
+    <p>concert</p>
+</div>
 <br/>
 </div>
 
