--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
 
     <section class="main">
         <h1>Contactez Nous</h1>
+        <img src="./css/ressources/contact2.jpg" alt="Background picture phone">
     </section>
 
     <section class="container">
