--- a/presentations.html
+++ b/presentations.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/presentations.css">
     <title>l'Odyssey</title>
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
@@ -33,9 +33,13 @@
         </nav>
     </header>
 
-    <div class="image-about"><img src=https://pixabay.com/images/id-1837150/ alt="photo de l'doyssey"></div>
+    <div class="space"></div>
 
-    <h1>Qui sommes nous</h1>
+    <div class="image-about"><img src="styles/ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
+
+    <div class="space"></div>
+    
+    <h1 id="title">Qui sommes nous</h1>
     <p style="text-align: center;">
         L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
 On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.  
@@ -71,7 +75,9 @@ Notre équipe reste à votre entière disposition.
         abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
-    <div class="burger"><img src=https://pixabay.com/images/id-1081707/ alt="photo de burger"></div>
+    <div class="space"></div>
+
+    <div class="image-burger"><img src="styles/ressources/burgerwild.jpg" alt="photo de burger"></div>
     <script src="script.js"></script>
 </body>
 </html>
