header img and style changing for the avis.html/avis.css pages

--- a/avis.html
+++ b/avis.html
@@ -11,7 +11,7 @@
     <title>Avis clients</title>
 </head>
 <body>
-   <!-- <header class="nav-container">
+    <header class="nav-container">
         <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <div class="nav-burger">
@@ -33,7 +33,7 @@
             </ul>
         </nav>
     </header>
--->
+
 
     <div id="container">
         <!-- CODE DE NOS PAGES ICI -->
