improved text css

--- a/presentations.html
+++ b/presentations.html
@@ -40,38 +40,41 @@
     <div class="space"></div>
     
     <h1 id="title">Qui sommes nous</h1>
-    <p style="text-align: center;">
+    <p>
         L'Odyssée Wild food est un restaurant atypique situé sur le campus de la prestigieuse Wild Code School.
 On y sert une cuisine du monde variée, aux saveurs exquises qui vous invitera au voyage.  
 Embarquez sur l'Odyssée pour une exploration au pays de l'exotisme et de la gourmandise.
     </p>
-    <p style="text-align: center;">
+    <p>
         Tous nos produits sont frais, nous nous engageons à vous servir seulement les meilleurs. 
-nos viandes viennent des meilleurs producteurs, que ce soit pour la volaille de bresse label rouge ou nos boeufs de race charolaise et limousines.
-Pas de panique, les vegans ne sont pas oubliés grâce à nos délicieux plats 100% garantis sans aucune particule animale.
+nos viandes viennent des meilleurs producteurs, que ce soit pour la volaille de bresse label rouge ou nos boeufs de race charolaise et limousines.</p>
+    <p>
+        Pas de panique, les vegans ne sont pas oubliés grâce à nos délicieux plats 100% garantis sans aucune particule animale.
 nos légumes proviennent de producteurs locaux s'appliquant corps et âmes à fournir la meilleure qualité possible.
 Tout est fait sur place par notre équipe dévouée à votre bien être gustatif.
     </p>
-    <p style="text-align: center;">
+    <p>
         Notre équipe est composée de la crême de la crême!
 Les serveurs front-end seront aux petits-soins pour vous satisfaire tout au long de votre aventure. 
 Grâce à leur expertise, vous disposerez des meilleurs conseils pour accorder nos mets et nos vins prestigieux.
 leur priorité est votre confort.
     </p>
-    <p style="text-align: center;">
-Les cuisiniers back-end, quant à eux, mettront tous leurs savoirs-faire à votre disposition pour vous servir les plats les plus délicieux.
+    <p>
+        Les cuisiniers back-end, quant à eux, mettront tous leurs savoirs-faire à votre disposition pour vous servir les plats les plus délicieux.
 Leur objectif est de vous régaler mais aussi de vous faire découvrir de nouvelles saveurs. 
 Leur base de données de compétences est impressionnante!
-Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
+</p>
+<p>
+        Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
 vous pouvez réserver une table dans notre restaurant grâce à l'onglet de réservation situé dans la barre de navigation.
     </p>
-    <p style="text-align: center;">
+    <p>
         N'hesitez pas à nous contacter pour toute information ou requête spéciale, nous disposons de salons privés réservables pour vos séminaires, mariages, réunions...
 Nous organisons également des soirées à thème (Halloween, Noel, Saint valentin...)
 Un onglet Evenements est disponible dans la barre de navigation afin de consulter nos manifestations passées et futures.
 Notre équipe reste à votre entière disposition.
     </p>
-    <p style="text-align: center;"> 
+    <p> 
         abonnez-vous à notre Newsletter pour rester informé.
     </p>
 
