--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li class="item"><a href="">Reservations</a></li>
                 <li class="item"><a href="">Presentations</a></li>
                 <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>v
+                <li class="item"><a href="">Evenements</a></li>
                 <li class="item"><a href="">Contact</a></li>
                 <li class="item"><a href="">Livre d'or</a></li>
                 <li class="item"><a href="">Rejoignez nous</a></li>
