--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="styles/contact.css">
     <title>l'Odyssey Contact</title>
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="css/ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="style.css"/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
@@ -36,7 +36,7 @@
 
     <section class="main">
         <h1>Contactez Nous</h1>
-        <img src="./css/ressources/contact2.jpg" alt="Background picture phone">
+        <img src="./styles/ressources/contact2.jpg" alt="Background picture phone">
     </section>
 
     <section class="container">
@@ -46,7 +46,7 @@
             <div class="adress-item-container">
 
                 <div class="adress-item">
-                    <img src="./css/ressources/maison.png" alt="House Icon">
+                    <img src="./styles/ressources/maison.png" alt="House Icon">
                     <p>
                         18 Rue de la Gare, <br>
                         28240 La Loupe
@@ -54,17 +54,17 @@
                 </div>
 
                 <div class="adress-item">
-                    <img src="./css/ressources/telephone.png" alt="Phone Icon">
+                    <img src="./styles/ressources/telephone.png" alt="Phone Icon">
                     <p>06 42 16 74 09</p>
                 </div>
 
                 <div class="adress-item">
-                    <img src="./css/ressources/facebook.png" alt="Facebook Icon">
+                    <img src="./styles/ressources/facebook.png" alt="Facebook Icon">
                     <a href="https://fr-fr.facebook.com/wildcodeschool/posts/la-wildcodeschool-de-la-loupe-httpswwwfacebookcomwild-code-school-25065429196872/746355398846648/">FaceBook</a>
                 </div>
 
                 <div class="adress-item">
-                    <img src="./css/ressources/instagram.png" alt="Instragram Icon">
+                    <img src="./styles/ressources/instagram.png" alt="Instragram Icon">
                     <a href="https://www.instagram.com/wildlaloupe/">Instragram</a>
                 </div>
 
@@ -96,7 +96,7 @@
                 <label for="message">Laissez un message :</label>
                 <textarea name="message" id="message" cols="40" rows="7" placeholder="Ecrivez votre message ici.." required></textarea>
             </div>
-            <input class="form-items form-submit" type="submit" value="Envoyé">
+            <input class="form-items form-submit" type="submit" value="Envoyer">
         </section>
 
     </section>
