--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,15 @@
         </section>
 
         <section class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10580.399010386216!2d1.011894!3d48.4738002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x44cf293e5870383a!2sWild%20Code%20School%20-%20Formation%20d%C3%A9veloppeur%20web!5e0!3m2!1sfr!2sfr!4v1623849802439!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <iframe
+            id="maps"
+            title="Addresse restaurant"
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10580.399010386216!2d1.011894!3d48.4738002!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x44cf293e5870383a!2sWild%20Code%20School%20-%20Formation%20d%C3%A9veloppeur%20web!5e0!3m2!1sfr!2sfr!4v1623849802439!5m2!1sfr!2sfr" 
+            width="100%"
+            height="100%"
+            style="border:0;"
+            allowfullscreen=""
+            loading="lazy"></iframe>
         </section>
 
         <section class="form-container">
