add start acceuil

--- a/index.html
+++ b/index.html
@@ -33,7 +33,28 @@
         </nav>
     </header>
 
-    <h1>L'Odyssey</h1>
+    <section class="acceuil-container">
+        <img src="" alt="Background picture">
+        <div class="acceuil-container-flex">
+            <div class="acceuil-title-container">
+                <h1>L'Odyssey</h1>
+                <h2>Retrouver les saveurs geeks</h2>
+            </div>
+            <div class="acceuil-link-container">
+                <div class="acceuil-link">
+                    <button><a href=""></a></button>
+                </div>
+                <div class="acceuil-link">
+                    <button><a href=""></a></button>
+                </div>
+                <div class="acceuil-link">
+                    <button><a href=""></a></button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="script.js"></script>
 </body>
