modify div in section, add # in links some pages

--- a/galerie.html
+++ b/galerie.html
@@ -22,38 +22,37 @@
                 </div>
             </div>
             <ul class="nav-items-container">
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
-                <li class="item"><a href="">Contact</a></li>
-                <li class="item"><a href="">Livre d'or</a></li>
-                <li class="item"><a href="">Rejoignez nous</a></li>
+                <li class="item"><a href="#">Menu</a></li>
+                <li class="item"><a href="#">Reservations</a></li>
+                <li class="item"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="#">Evenements</a></li>
+                <li class="item"><a href="contact.html">Contact</a></li>
+                <li class="item"><a href="#">Livre d'or</a></li>
+                <li class="item"><a href="#">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
 
-
     <!-- gallery container -->
-    <div id="container" class="gallery">
+    <section id="section-gallery">
         <div id="gallery-header">
             <div id="gallery-banner">
                 <img src="/ressources/gallery-banner.jpg" alt="bannière">
             </div>
             <div id="nav-gallery">
                 <ul>
-                    <li><a href="#page-classique">Classique</a></li>
-                    <li><a href="#page-spicy">épicé</a></li>
-                    <li><a href="#page-vegan">vegan</a></li>
+                    <li><a href="#section-classic">Classique</a></li>
+                    <li><a href="#section-spicy">épicé</a></li>
+                    <li><a href="#section-vegan">vegan</a></li>
                 </ul>
             </div> 
         </div>
 
         <div id="gallery">
 
-                <!-- page classique -->  
-            <div class="page">                  
+            <!-- section classique -->  
+            <section id="section-classic">                  
                 <div class="course-container">
                     <h4>Menu classique à 14€90</h4>
                     <div class="gallery-picture">
@@ -78,10 +77,10 @@
                     <h2>cheesecake</h2>
                     <h3>dairy free - gluten free</h3>
                 </div>
-            </div>
+            </section>
 
-            <!-- page vegan -->  
-            <div class="page">                
+            <!-- section vegan -->  
+            <section id="section-vegan">                
                 <div class="course-container">
                     <h4>Menu vegan à 14€90</h4>
                     <div id="vegan-entree" class="gallery-picture">
@@ -106,10 +105,10 @@
                     <h2>crème coco tapioca</h2>
                     <h3>dairy free - gluten free</h3>
                 </div>
-            </div>
+            </section>
 
-            <!-- page spicy -->  
-            <div class="page">               
+            <!-- section spicy -->  
+            <section id="section-spicy">               
                 <div class="course-container">
                     <h4>Menu épicé à 14€90</h4>
                     <div id="spicy-entree" class="gallery-picture">
@@ -134,7 +133,7 @@
                     <h2>glaces au choix</h2>
                     <h3> gluten free</h3>
                 </div>
-            </div>
+            </section>
         
         </div>   
     </div>
