modifying the html

--- a/avis.html
+++ b/avis.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="avis.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/avis.css">
     <title>Avis clients</title>
 </head>
 <body>
@@ -72,6 +72,6 @@
 
     </footer>
 
-    <script src="avis.js"></script>
+    <script src="scripts/avis.js"></script>
 </body>
 </html>
