adding the src of the menu script

--- a/avis.html
+++ b/avis.html
@@ -71,7 +71,7 @@
     <footer>
 
     </footer>
-
+    <script src="scripts/script.js"></script>
     <script src="scripts/avis.js"></script>
 </body>
 </html>
