--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>l'Odyssey</title>
 </head>
 <body>
@@ -14,10 +14,10 @@
         <div class="logo"><img src="css/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item desktop"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="menu.html">Menu</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item desktop"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line1"></div>
