--- a/presentations.html
+++ b/presentations.html
@@ -40,7 +40,7 @@
     <div class="image-about"><img src="styles/ressources/restaurantwild.jpg" alt="photo de l'doyssey"></div>
 
     <div class="space"></div>
-    
+
     <h2 class="small-titles">Notre cuisine</h2>
 
 <section class="article">
@@ -85,7 +85,7 @@
 
     <div class="space"></div>
 
-    <div class="image-burger"><img src="styles/ressources/burgerwild.jpg" alt="photo de burger"></div>
+    <div class="image-about"><img src="styles/ressources/burgerwild.jpg" alt="photo de burger"></div>
     <script src="script.js"></script>
 </body>
 </html>
