add pictures and status q

--- a/event.html
+++ b/event.html
@@ -9,6 +9,7 @@
     <title>l'Odyssey</title>
 </head>
 <body>
+   
     <header class="nav-container">
         <div class="logo"><img src="css/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
@@ -25,37 +26,37 @@
             </div>
             <ul class="nav-burger-item">
                 <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
                 <li class="item mobile"><a href="">Presentations</a></li>
                 <li class="item"><a href="">Livre d'or</a></li>
                 <li class="item"><a href="">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
-
-    <div class="event-container">
-    <div class="img-container">
-<img class="theme" src="" alt="img du thème">
-<p>Mariage</p>
-</div>
-<div class="img-container">
-    <img class="theme" src="" alt="img du thème">
-    <p>Dancing</p>
-</div>
-<div class="img-container">
-    <img class="theme" src="" alt="img du thème">
-    <p>Réunion de travail</p>
-</div>
-<div class="img-container">
-    <img class="theme" src="" alt="img du thème">
-    <p>concert</p>
-</div>
-<br/>
-</div>
+    <h1 class=event-h1>EVENEMENT</h1>
+    <section class="event-container">
+        <div class="img-container">
+            <img class="theme" src="css/ressources/wedding.jpeg" alt="img du thème">
+            <p>Mariage</p>
+        </div>
+        <div class="img-container">
+            <img class="theme" src="css/ressources/tango.jpeg" alt="img du thème">
+            <p>Dancing</p>
+        </div>
+        <div class="img-container">
+            <img class="theme" src="css/ressources/meeting.jpeg" alt="img du thème">
+            <p>Réunion de travail</p>
+        </div>
+        <div class="img-container">
+            <img class="theme" src="css/ressources/cheers.jpeg" alt="img du thème">
+            <p>concert</p>
+        </div>
+            <br/>
+    </section>
 
 
 <p class="style">Nous organisons également des repas à thème comme Halloween et St-Valentin.</p>
-<p>N'hésitez pas à vous abonner à la newsletter pour ne rater aucun évenement "emoticone".</p>
+<p>N'hésitez pas à vous abonner à la newsletter pour ne rater aucun évenement <span class="span-event">&#x1F609;.</span></p>
 
 
 
