added ressources/ and modified css.emploi

--- a/emploi.html
+++ b/emploi.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/emploi.css">
     <title>l'Odyssey</title>
 </head>
@@ -41,14 +42,14 @@
 
 <div class="flexbox1">
     <div class="valeurs">
-        <img src="https://images.unsplash.com/photo-1537047902294-62a40c20a6ae?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80">
+        <img src="ressources/emploi1.jpg">
     </div>
     <div class="valeurs">
         <h3>Nos valeurs</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla earum laudantium mollitia beatae iciendis assumenda facere porro, quisquam aperiam delectus perferendis rem ipsum blanditiis! Accusantium dicta ipsa doloribus culpa, eos temporibus veniam illo praesentium aut sunt ad labore hic architecto nihil eum non quam ea quia adipisci rem, quod aperiam. Quibusdam consequuntur repellat, accusamus et dolor saepe iste similique nesciunt illo vel? Nisi ad dolore sint repellat nam vitae quaerat aut explicabo iure velit dolorum quis, quo eos, animi hic molestias modi harum! Inventore, aliquid? Deleniti, necessit</p>
     </div>
     <div class="valeurs">
-        <img src="https://images.unsplash.com/photo-1488992783499-418eb1f62d08?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=853&q=80">
+        <img src="ressources/emploi2.jpg">
     </div>
 </div>
 
