download images and modify links in menu.html

--- a/menu.html
+++ b/menu.html
@@ -43,7 +43,7 @@
                     <br>
                     "Le classique"
                 </h2>
-                <img class = "menu-img" src="https://images.unsplash.com/photo-1616645500344-209060c84970?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Menu HTML">
+                <img class = "menu-img" src="ressources/menu/img-menu1-html.jfif" alt="Menu 1 : HTML">
                 <p>Pour nos clients qui veulent aller à l'essentiel. Ce délicieux sandwich à la viande de boeuf sélectionnée avec nos partenaires...Equilibre parfait Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur alias rerum minus.</p>
             </div>
             
@@ -65,7 +65,7 @@
                     <br>
                     "Le vegan"
                 </h2>
-                <img class = "menu-img" src="https://images.unsplash.com/photo-1551782450-a2132b4ba21d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" alt="Menu">
+                <img class = "menu-img" src="ressources/menu/img-menu2-css.jfif" alt="Menu 2 : CSS">
                 <p>Soucieux de répondre au style de vie de chacun, notre chef a préparé ce sandwich végétal avec des produits de saison. Une cascade de saveurs à chaque bouchée... Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt</p>
             </div>
             <p class = "drop-down" onclick="youSeeMe(2)">click to show/hide</p>
@@ -86,7 +86,7 @@
                     <br>
                     "L'épicé"
                 </h2>
-                <img class = "menu-img" src="https://images.unsplash.com/photo-1602345730639-1c04eec20594?ixid=MnwxMjA3fDB8MHxzZWFyY2h8M3x8YmxhY2slMjBidXJnZXJ8ZW58MHwwfDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="Menu JavaScript">
+                <img class = "menu-img" src="ressources/menu/img-menu3-js.jfif" alt="Menu 3 : JavaScript">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt debitis tenetur distinctio amet a nam atque qui ipsam eligendi, nihil soluta vel omnis. Dolore, enim. Aspernatur nam blanditiis adipisci exercitationem!</p>
             </div>
             <p class = "drop-down" onclick="youSeeMe(3)">click to show/hide</p>
