--- a/emploi.html
+++ b/emploi.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styles/emploi.css">
+    <script defer src="https://friconix.com/cdn/friconix.js"> </script>
     <title>l'Odyssey</title>
 </head>
 <body>
