--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
@@ -35,7 +35,7 @@
     </header>
 
     <section class="acceuil-container">
-        <img src="" alt="Background picture">
+        <img src="ressources/acceuilBg2.jpg" alt="Background picture">
         <div class="acceuil-container-flex">
             <div class="acceuil-title-container">
                 <h1>L'Odyssey</h1>
