--- a/avis.html
+++ b/avis.html
@@ -12,24 +12,25 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
-            <div class="nav-burger">
-                <div class="burger">
-                    <div class="burger-line1"></div>
-                    <div class="burger-line2"></div>
-                    <div class="burger-line3"></div>
-                </div>
-            </div>
             <ul class="nav-items-container">
-                <li class="item"><a href="#">Menu</a></li>
-                <li class="item"><a href="#reservation.html">Reservations</a></li>
-                <li class="item"><a href="presentations.html">Presentations</a></li>
-                <li class="item"><a href="galerie.html">Galerie</a></li>
-                <li class="item"><a href="#">Evenements</a></li>
+                <li class="item"><a href="index.html">Menu</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item desktop"><a href="presentations.html">Presentations</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
-                <li class="item"><a href="#avis.html">Livre d'or</a></li>
-                <li class="item"><a href="#">Rejoignez nous</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line1"></div>
+                <div class="burger-line2"></div>
+                <div class="burger-line3"></div>
+            </div>
+            <ul class="nav-burger-item">
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="">Evenements</a></li>
+                <li class="item mobile"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
