--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>l'Odyssey</title>
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="css/ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="">Menu</a></li>
@@ -34,8 +34,9 @@
         </nav>
     </header>
 
-    <h1>L'Odyssey</h1>
-
+<footer>
+    <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
+</footer>
     <script src="script.js"></script>
 </body>
 </html>
