--- a/presentations.html
+++ b/presentations.html
@@ -6,7 +6,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/presentations.css">
-    <title>l'Odyssey</title>
 </head>
 <body>
 
@@ -70,7 +69,7 @@
     Leur base de données de compétences est impressionnante!<br>
     </p>
 
-    <h4 class="small-titles">Navigation</h4>
+    <h4 class="small-titles">Notre offre</h4>
 
     Nous vous invitons à consulter notre menu et visiter la galerie photo afin de vous familiariser avec notre cuisine.
     vous pouvez réserver une table dans notre restaurant grâce à l'onglet de réservation situé dans la barre de navigation.<br>
