--- a/index.html
+++ b/index.html
@@ -35,22 +35,23 @@
     </header>
 
     <section class="acceuil-container">
-        <img src="ressources/acceuilBg2.jpg" alt="Background picture">
-        <div class="acceuil-container-flex">
-            <div class="acceuil-title-container">
-                <h1>L'Odyssey</h1>
-                <h2>Retrouver les saveurs geeks</h2>
+        <img src="ressources/acceuilBg.jpg" alt="Background picture">
+        <div class="acceuil-title-container">
+            <h1 class="main-title">L'Odyssey</h1>
+            <h2 class="sub-title">Retrouver les saveurs geeks</h2>
+        </div>
+        <div class="acceuil-link-container">
+            <div class="acceuil-link">
+                <img src="" alt="Picture background Menu">
+                <button><a href="">Menu</a></button>
             </div>
-            <div class="acceuil-link-container">
-                <div class="acceuil-link">
-                    <button><a href=""></a></button>
-                </div>
-                <div class="acceuil-link">
-                    <button><a href=""></a></button>
-                </div>
-                <div class="acceuil-link">
-                    <button><a href=""></a></button>
-                </div>
+            <div class="acceuil-link">
+                <img src="" alt="Picture background Presentation">
+                <button><a href="">Presentation</a></button>
+            </div>
+            <div class="acceuil-link">
+                <img src="" alt="Picture background Reservations">
+                <button><a href="">Reservations</a></button>
             </div>
         </div>
     </section>
