--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item desktop"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="menu.html">Menu</a></li>
+                <li class="item"><a href="reservations.html">Reservations</a></li>
+                <li class="item"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line1"></div>
@@ -25,11 +25,10 @@
                 <div class="burger-line3"></div>
             </div>
             <ul class="nav-burger-item">
-                <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
-                <li class="item mobile"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Livre d'or</a></li>
-                <li class="item"><a href="">Rejoignez nous</a></li>
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="evenements.html">Evenements</a></li>
+                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
