--- a/reservation.html
+++ b/reservation.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reservation.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/reservation.css">
     <title>Réservation</title>
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="index.html">Menu</a></li>
@@ -106,7 +106,7 @@
     <footer>
 
     </footer>
-
-    <script src="reservation.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/reservation.js"></script>
 </body>
 </html>
