--- a/reservation.html
+++ b/reservation.html
@@ -27,7 +27,7 @@
             </div>
             <ul class="nav-burger-item">
                 <li class="item"><a href="galerie.html">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
                 <li class="item mobile"><a href="presentations.html">Presentations</a></li>
                 <li class="item"><a href="avis.html">Livre d'or</a></li>
                 <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
