uptade before pull dev

--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
             <h2 class="sub-title">Retrouver les saveurs geeks</h2>
         </div>
         <div class="acceuil-link-container">
-            <div class="acceuil-link">
-                <img src="" alt="Picture background Menu">
-                <button><a href="">Menu</a></button>
+            <div class="acceuil-link acceuil-menu-img">
+                <button><a href="#">Menu</a></button>
             </div>
-            <div class="acceuil-link">
-                <img src="" alt="Picture background Presentation">
-                <button><a href="">Presentation</a></button>
+            <div class="acceuil-link acceuil-present-img">
+                <button><a href="presentations.html">Presentation</a></button>
             </div>
-            <div class="acceuil-link">
-                <img src="" alt="Picture background Reservations">
-                <button><a href="">Reservations</a></button>
+            <div class="acceuil-link acceuil-order-img">
+                <button><a href="reservation.html">Reservations</a></button>
             </div>
         </div>
     </section>
