--- a/emploi.html
+++ b/emploi.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/emploi.css">
     <script defer src="https://friconix.com/cdn/friconix.js"> </script>
     <title>l'Odyssey</title>
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="css/ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item desktop"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="menu.html">Menu</a></li>
+                <li class="item"><a href="reservations.html">Reservations</a></li>
+                <li class="item"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line1"></div>
@@ -26,11 +26,10 @@
                 <div class="burger-line3"></div>
             </div>
             <ul class="nav-burger-item">
-                <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
-                <li class="item mobile"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Livre d'or</a></li>
-                <li class="item"><a href="">Rejoignez nous</a></li>
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
+                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
