--- a/contact.html
+++ b/contact.html
@@ -14,10 +14,10 @@
         <div class="logo"><img src="styles/ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
             <ul class="nav-items-container">
-                <li class="item"><a href="">Menu</a></li>
-                <li class="item"><a href="">Reservations</a></li>
-                <li class="item desktop"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Contact</a></li>
+                <li class="item"><a href="menu.html">Menu</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item desktop"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="burger-line1"></div>
