--- a/presentations.html
+++ b/presentations.html
@@ -18,11 +18,12 @@
                 <li class="item"><a href="presentations.html">Presentations</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
-            <div class="burger">
-                <div class="burger-line1"></div>
-                <div class="burger-line2"></div>
-                <div class="burger-line3"></div>
-            </div>
+                    <div class="burger">
+                        <div class="burger-line1"></div>
+                        <div class="burger-line2"></div>
+                        <div class="burger-line3"></div>
+                    </div>
+                </div>
             <ul class="nav-burger-item">
                 <li class="item"><a href="galerie.html">Galerie</a></li>
                 <li class="item"><a href="evenements.html">Evenements</a></li>
@@ -84,6 +85,14 @@
     <div class="space"></div>
 
     <div class="image-about"><img src="styles/ressources/burgerwild.jpg" alt="photo de burger"></div>
+
+    <div class="space"></div>
+
+    <footer>
+        <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
+    </footer>
+
+
     <script src="script.js"></script>
 </body>
 </html>
