--- a/presentation.html
+++ b/presentation.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/presentations.css">
+    <link rel="stylesheet" href="styles/presentation.css">
 </head>
 <body>
 
@@ -14,8 +14,8 @@
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
-                <li class="item"><a href="reservations.html">Reservations</a></li>
-                <li class="item"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item"><a href="presentation.html">Presentation</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
                     <div class="burger">
@@ -26,7 +26,7 @@
                 </div>
             <ul class="nav-burger-item">
                 <li class="item"><a href="galerie.html">Galerie</a></li>
-                <li class="item"><a href="evenements.html">Evenements</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
                 <li class="item"><a href="avis.html">Livre d'or</a></li>
                 <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
