--- a/presentation.html
+++ b/presentation.html
@@ -88,7 +88,7 @@
 
     <div class="space"></div>
 
-    <footer>
+    <footer class="footer-style">
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
 
