change links menu nav and links for some picture, add footer

--- a/galerie.html
+++ b/galerie.html
@@ -26,11 +26,11 @@
                 <div class="burger-line3"></div>
             </div>
             <ul class="nav-burger-item">
-                <li class="item"><a href="">Galerie</a></li>
-                <li class="item"><a href="">Evenements</a></li>
-                <li class="item mobile"><a href="">Presentations</a></li>
-                <li class="item"><a href="">Livre d'or</a></li>
-                <li class="item"><a href="">Rejoignez nous</a></li>
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
+                <li class="item mobile"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
