--- a/avis.html
+++ b/avis.html
@@ -14,22 +14,23 @@
     <header class="nav-container">
         <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
         <nav class="navbar">
-            <div class="nav-burger">
-                <div class="burger">
-                    <div class="burger-line1"></div>
-                    <div class="burger-line2"></div>
-                    <div class="burger-line3"></div>
-                </div>
-            </div>
             <ul class="nav-items-container">
-                <li class="item"><a href="#">Menu</a></li>
-                <li class="item"><a href="#reservation.html">Reservations</a></li>
-                <li class="item"><a href="presentations.html">Presentations</a></li>
-                <li class="item"><a href="galerie.html">Galerie</a></li>
-                <li class="item"><a href="#">Evenements</a></li>
+                <li class="item"><a href="menu.html">Menu</a></li>
+                <li class="item"><a href="reservation.html">Reservations</a></li>
+                <li class="item desktop"><a href="presentations.html">Presentations</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
-                <li class="item"><a href="#avis.html">Livre d'or</a></li>
-                <li class="item"><a href="#">Rejoignez nous</a></li>
+            </ul>
+            <div class="burger">
+                <div class="burger-line1"></div>
+                <div class="burger-line2"></div>
+                <div class="burger-line3"></div>
+            </div>
+            <ul class="nav-burger-item">
+                <li class="item"><a href="galerie.html">Galerie</a></li>
+                <li class="item"><a href="event.html">Evenements</a></li>
+                <li class="item mobile"><a href="presentations.html">Presentations</a></li>
+                <li class="item"><a href="avis.html">Livre d'or</a></li>
+                <li class="item"><a href="emploi.html">Rejoignez nous</a></li>
             </ul>
         </nav>
     </header>
@@ -69,7 +70,7 @@
     </div>
 
     <footer>
-
+        <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
     <script src="scripts/script.js"></script>
     <script src="scripts/avis.js"></script>
