--- a/presentations.html
+++ b/presentations.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/presentation.css">
+    <link rel="stylesheet" href="styles/presentations.css">
 </head>
 <body>
 
@@ -15,15 +15,14 @@
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
                 <li class="item"><a href="reservation.html">Reservations</a></li>
-                <li class="item"><a href="presentation.html">Presentation</a></li>
+                <li class="item desktop"><a href="presentation.html">Presentations</a></li>
                 <li class="item"><a href="contact.html">Contact</a></li>
             </ul>
-                    <div class="burger">
-                        <div class="burger-line1"></div>
-                        <div class="burger-line2"></div>
-                        <div class="burger-line3"></div>
-                    </div>
-                </div>
+            <div class="burger">
+                <div class="burger-line1"></div>
+                <div class="burger-line2"></div>
+                <div class="burger-line3"></div>
+            </div>
             <ul class="nav-burger-item">
                 <li class="item"><a href="galerie.html">Galerie</a></li>
                 <li class="item"><a href="event.html">Evenements</a></li>
@@ -84,15 +83,10 @@
 
     <div class="space"></div>
 
-    <div class="image-about"><img src="styles/ressources/burgerwild.jpg" alt="photo de burger"></div>
-
-    <div class="space"></div>
-
-    <footer class="footer-style">
+    <div class="image-about"><img src="ressources/burgerwild.jpg" alt="photo de burger"></div>
+    <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
-
-
     <script src="script.js"></script>
 </body>
 </html>
