--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <header class="nav-container">
-            <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+            <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
             <nav class="navbar">
                 <ul class="nav-items-container">
                     <li class="item"><a href="menu.html">Menu</a></li>
@@ -104,8 +104,8 @@
         </div>
     </container>
 
-    <script src="script.js"></script>
-    <script src="script/menu.js"></script>
+    <script src="scripts/script.js"></script>
+    <script src="scripts/menu.js"></script>
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
