--- a/presentations.html
+++ b/presentations.html
@@ -11,7 +11,7 @@
 <body>
 
     <header class="nav-container">
-        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
@@ -89,6 +89,6 @@
     <footer>
         <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
     </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
