--- a/reservation.html
+++ b/reservation.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo"><img src="ressources/logoWildWhite.png" alt="Logo du site"></div>
+        <div class="logo"><a href="index.html"><img src="ressources/logoWildWhite.png" alt="Logo du site"></a></div>
         <nav class="navbar">
             <ul class="nav-items-container">
                 <li class="item"><a href="menu.html">Menu</a></li>
@@ -107,6 +107,6 @@
             <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
         </footer>
 
-    <script src="reservation.js"></script>
+    <script src="scripts/reservation.js"></script>
 </body>
 </html>
