--- a/emploi.html
+++ b/emploi.html
@@ -81,7 +81,7 @@
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
 
-<script src="script.js"></script>
+<script src="scripts/script.js"></script>
 </body>
 </html>
 
