--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
 <footer>
     <p>© 2021 Racoon Team - Hébergement GitHub, <a href="mentions-legales.html" target='_blank'>À propos et mentions légales</a></p>
 </footer>
-    <script src="script.js"></script>
+    <script src="scripts/script.js"></script>
 </body>
 </html>
